--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,4 @@
 {
-  "loader": "ts-node/esm",
   "extensions": [
     "ts",
     "tsx"
@@ -7,7 +6,8 @@
   "spec": [
     "src/**/*.spec.*"
   ],
-  "watch-files": [
-    "src"
+  "node-option": [
+    "experimental-specifier-resolution=node",
+    "loader=ts-node/esm"
   ]
 }
