--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.31",
     "@types/sinon": "^10.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
     "c8": "^7.11.2",
     "chai": "^4.3.6",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^10.0.0",
