--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "library",
     "starter"
   ],
-  "author": "martiendt@gmail.com",
+  "author": "Martien Dermawan Tanama <martiendt@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
