--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "rimraf lib && tsc",
     "lint": "eslint ./src/**/*.ts",
-    "lint:fix": "eslint ./src/**/*.ts --fix",
+    "lint:fix": "npm run lint -- --fix",
     "test": "jest",
     "test:coverage": "rimraf coverage && jest --coverage"
   },
