--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lib/"
   ],
   "scripts": {
-    "build": "rimraf lib && tsc",
+    "build:compile": "tsc --project tsconfig.build.json",
+    "build:resolve-path": "tsc-alias --project tsconfig.build.json",
+    "build": "rimraf lib && npm run build:compile && npm run build:resolve-path",
     "lint": "eslint ./src/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest",
-    "test:coverage": "rimraf coverage && jest --coverage"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand",
+    "test:coverage": "rimraf coverage && npm run test -- --coverage"
   },
   "keywords": [
     "express",
@@ -38,6 +40,7 @@
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.2",
+    "tsc-alias": "^1.6.11",
     "typescript": "^4.6.4"
   }
 }
