--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "lib/"
   ],
   "scripts": {
+    "dev:compile": "tsc -w --project tsconfig.build.json",
+    "dev:resolve-path": "tsc-alias -w --project tsconfig.build.json",
+    "dev": "shx rm -rf lib && concurrently -k npm:dev:*",
     "build:compile": "tsc --project tsconfig.build.json",
     "build:resolve-path": "tsc-alias --project tsconfig.build.json",
-    "build": "rimraf lib && npm run build:compile && npm run build:resolve-path",
+    "build": "shx rm -rf lib && npm run build:compile && npm run build:resolve-path",
     "lint": "eslint ./src/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand",
-    "test:coverage": "rimraf coverage && npm run test -- --coverage"
+    "test:coverage": "shx rm -rf coverage && npm run test -- --coverage"
   },
   "keywords": [
     "express",
@@ -28,19 +31,25 @@
     "url": "https://github.com/point-hub/express-library-starter.git"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.31",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "babel-jest": "^28.1.2",
+    "babel-plugin-transform-import-meta": "^2.2.0",
+    "concurrently": "^7.2.2",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.1.2",
     "prettier": "^2.6.2",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^28.0.2",
+    "shx": "^0.3.4",
     "tsc-alias": "^1.6.11",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.4"
   }
 }
